; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_smi_8_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_smi_8_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@CYC_SCC_R_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_smi_8_d() #0 {
  %1 = call i64 (...) @COND_MI()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32, i32* @DY, align 4
  %5 = or i32 %4, 255
  store i32 %5, i32* @DY, align 4
  %6 = load i32, i32* @CYC_SCC_R_TRUE, align 4
  %7 = call i32 @USE_CYCLES(i32 %6)
  br label %11

8:                                                ; preds = %0
  %9 = load i32, i32* @DY, align 4
  %10 = and i32 %9, -256
  store i32 %10, i32* @DY, align 4
  br label %11

11:                                               ; preds = %8, %3
  ret void
}

declare dso_local i64 @COND_MI(...) #1

declare dso_local i32 @USE_CYCLES(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
